syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.smartparking.grpc";
option java_outer_classname = "VancancyManagementServiceImpl";
package ParkingSystem;


service VancancyManagement {

  //Informa que esta ocupando uma vaga
  rpc vancancyCheckIn(Status) returns (Ticket) {}

  //Informa que esta desocupando uma vaga
  rpc vancancyCheckOut(Status) returns (Ticket) {}

  //Informa se nao ha vaga no estacionamento
  rpc vancancyCheckIfItIsFull(Status) returns (Ticket) {}
}

message Ticket{
  string licensePlate = 1;
  string checkin = 2;
  string checkout = 3;
  string price = 4;
}

message Status{
  string status = 1;
}